@@ -25,7 +25,7 @@
 
 /*
  * Data transfer module for ProFTPD
- * $Id: mod_xfer.c,v 1.63 2002-05-12 20:48:55 castaglia Exp $
+ * $Id: mod_xfer.c,v 1.64 2002-05-19 20:50:13 castaglia Exp $
  */
 
 /* History Log:
@@ -1103,9 +1103,11 @@ cmd_stou(cmd_rec *cmd)
 	return HANDLED(cmd);
 }
 
-MODRET xfer_cleanup(cmd_rec *cmd)
-{
-  data_cleanup();
+MODRET xfer_err_cleanup(cmd_rec *cmd) {
+  if (session.xfer.p)
+    destroy_pool(session.xfer.p);
+
+  memset(&session.xfer, '\0', sizeof(session.xfer));
   return DECLINED(cmd);
 }
 
@@ -1227,12 +1229,12 @@ static cmdtable xfer_commands[] = {
   { PRE_CMD, C_STOR,	G_WRITE, pre_cmd_stor,	TRUE,	FALSE },
   { CMD,     C_STOR,	G_WRITE, cmd_stor,	TRUE,	FALSE, CL_WRITE },
   { LOG_CMD, C_STOR,    G_NONE,	 log_stor,	FALSE,  FALSE },
-  { LOG_CMD_ERR, C_STOR,G_NONE,  xfer_cleanup,  FALSE,  FALSE },
-  { LOG_CMD_ERR, C_RETR,G_NONE,  xfer_cleanup,  FALSE,  FALSE },
+  { LOG_CMD_ERR, C_STOR,G_NONE,  xfer_err_cleanup,  FALSE,  FALSE },
+  { LOG_CMD_ERR, C_RETR,G_NONE,  xfer_err_cleanup,  FALSE,  FALSE },
   { CMD,     C_STOU,	G_WRITE, cmd_stou,	TRUE,	FALSE, CL_WRITE },
   { PRE_CMD, C_APPE,	G_WRITE, pre_cmd_appe,	TRUE,	FALSE },
-  { LOG_CMD_ERR, C_STOU,G_NONE,  xfer_cleanup,  FALSE,  FALSE },
-  { LOG_CMD_ERR, C_APPE,G_NONE,  xfer_cleanup,  FALSE,  FALSE },
+  { LOG_CMD_ERR, C_STOU,G_NONE,  xfer_err_cleanup,  FALSE,  FALSE },
+  { LOG_CMD_ERR, C_APPE,G_NONE,  xfer_err_cleanup,  FALSE,  FALSE },
   { CMD,     C_APPE,	G_WRITE, cmd_stor,	TRUE,	FALSE, CL_WRITE },
   { LOG_CMD, C_APPE,	G_NONE,  log_stor,	FALSE,  FALSE },
   { CMD,     C_ABOR,	G_NONE,	 cmd_abor,	TRUE,	TRUE,  CL_MISC  },
